添加完善资料页面

--- a/yxyl/app/src/main/res/values/strings.xml
+++ b/yxyl/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">yxyl</string>
+    <string name="title_activity_basepage">basepage</string>
+    <string name="action_settings">Settings</string>
 </resources>
